visible delete button on lower resolutions fix

--- a/css/light-style.css
+++ b/css/light-style.css
@@ -63,3 +63,8 @@
         background-size: 100%;
     }
 }
+@media only screen and (max-width: 1080px){
+    .todo_list__delete{
+        opacity: .4;
+    }
+}
